--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ django==4.2.6
 djangorestframework==3.12.4
 matplotlib==3.8.0
 pillow==10.1.0
+psycopg==3.1.12
+psycopg2==2.9.9
 psycopg2-binary==2.9.1
+psycopg_c==3.1.12
 django-environ==0.7.0
 django-redis==5.0.0
 redis==4.0.2
